aws/staging/django.yml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod
  labels:
    app: django
spec:
  nodeSelector:
    server-name: serverA
  imagePullSecrets:
    - name: secret-registry
  restartPolicy: Always
  volumes:
    - name: django-static-data
      persistentVolumeClaim:
        claimName: static-assets-volume-claim
  containers:
    - name: django-app
      image: maged1995/django-app:latest
      volumeMounts:
        - name: django-static-data
          mountPath: /app/static
          subPath: django_files
      command:
        [
          "/bin/sh",
          "-c",
          "cd /app && python3 manage.py wait_for_database && python3 manage.py makemigrations && python3 manage.py migrate && python3 manage.py collectstatic && python3 manage.py runserver 0.0.0.0:3000",
        ]
      imagePullPolicy: Always
      resources:
      ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
